Updated project version